# libHongKong

./: ForDevelopper.txt  HowToBUILD.txt  README.TXT  README.md  classes.txt
LICENCE/: GPL.ADDITION.TXT  MIT.TXT
ftdi_proprietary/libftd2xx/libusb/libusb/: io.c
ftdi_proprietary/libftd2xx/libusb/libusb/os/: linux_usbfs.c
sample/: build.sh  hkBase_sim_sample.cpp  hk_SFC_sample.cpp  readme.txt
src/: CMakeLists.txt  SFC.cpp  SFC.h  build.sh  ch.cpp  ch.h  fastio.cpp  fastio.h  ftwrapper.c  ftwrapper.h  libHongKong.h  libhongkong.cpp  lowlevel_io.cpp  lowlevel_io.h
test/: hk_SFC_test.exe.stackdump  hk_sim_test.cpp  hk_sim_test_result.txt  maketestdata.sh  test.sh  testdata.txt
